<package format="2">
  <name>rviz_aerial_plugins</name>
  <version>0.0.1</version>
  <description>
    Plugin to visualize aerial data in RVIZ
  </description>
  <maintainer email="alex@erlerobotics.com">Alejandro Hernandez</maintainer>
  <license>All right reserved</license>

  <author>Alejandro Hernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <depend>proposed_aerial_msgs</depend>
  <depend>px4_msgs</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>rviz_rendering_tests</test_depend>
  <test_depend>rviz_visual_testing_framework</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
